# SuffixStack

./: ..Suffix Tree  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  suffstack.cc  suffstack.hpp  sufftree.cc  sufftree.hpp  tests.cc
